Make index cards display:block (Edge spacing fix)

--- a/css/home.css
+++ b/css/home.css
@@ -341,6 +341,7 @@ a {
 }
 
 .home ul[aria-label="filterable"] li {
+  display: block;
   width: 100%;
   height: auto;
 }
