--- a/scss/4-organisms/_list-filter.scss
+++ b/scss/4-organisms/_list-filter.scss
@@ -8,6 +8,7 @@ ul[aria-label="filterable"] {
     }
 
     li {
+        display: block;
         width: 100%;
         height: auto;
     }
